--- a/index.css
+++ b/index.css
@@ -5,14 +5,24 @@ html, body{
 }
 
 body{
-    background: #000;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-image: url("sampleLogo.jpg");
+    background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+    font-family: Verdana, sans-serif;
+    font-weight: 700;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main{
     background: white;
+    text-align: center;
 }
 
 p{
-    font-size: 20rem;
+    font-size: 2rem;
 }
